--- a/todolist/views/index.ejs
+++ b/todolist/views/index.ejs
@@ -1,23 +1,26 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
-        <link rel="stylesheet" href="styles.css"> 
-        <title>todolist</title>
-    </head>
-    <body>
-       <form action="/" method="post" accept-charset="utf-8">
-           <h1> <%= listName %>   </h1>
-           
-          <ol>
-              <% for (item of listItems ){%>
-              <div class='list_items'> 
-                  <li><input type='checkbox'class='check'> <%= item %>  </li>
-              <%}%>
+  <head>
+     <meta charset="utf-8" />
+     <meta name="viewport" content="width=device-width" />
+     <link rel="stylesheet" href="styles.css"> 
+     <title>todolist</title>
+  </head>
+  <body>
+    <h1> <%= listName %>   </h1>
+    <form action='/delete' method='post'>    
+    <ol>
+      <% listItems.forEach((item)=>{ %>
+      <div class='list_items'> 
+        <li>
+           <input type='checkbox' name='_id' onChange='this.form.submit()' value=<%=item._id%> > <%= item.name %>
+
+                  </li>
+              <%})%>
               </div>
           </ol> 
-      
+           </form> 
+       <form action="/" method="post" accept-charset="utf-8">
             <div class='add_item'>
               <input type="text" placeholder='add item' name="newItem" autocomplete='off'> 
               <button type="submit" name='list' value=<%=listName%>>add item</button>
