--- a/blog/views/home.ejs
+++ b/blog/views/home.ejs
@@ -3,7 +3,7 @@
     <p><%= paragraph%></p>
     <% comments.forEach((post)=>{%>
     <h1><%= post.title%></h1>
-    <p><%= post.body.substring(0,100)+'.....'%> 
+    <p><%= post.content+'.....'%> 
         <a href='/posts/<%=post.title%>'>read more</a>
     </p>
 
