revisit the code and perform some updates

--- a/blog/views/post.ejs
+++ b/blog/views/post.ejs
@@ -1,6 +1,8 @@
-<%-include('partials/header')-%>
-<h1><%= header%></h1
-<p><%= paragraph %></p>
+    <%-include('partials/header')-%>
+    <h1><%= header%></h1>
+    <p style = "white-space:pre-line;">
+        <%= paragraph %>
+    </p>
 <%-include('partials/footer')-%>
 
 
