--- a/blog/views/home.ejs
+++ b/blog/views/home.ejs
@@ -2,10 +2,13 @@
     <h1>Home</h1>  
     <p><%= paragraph%></p>
     <% comments.forEach((post)=>{%>
-    <h1><%= post.title%></h1>
-    <p><%= post.content+'.....'%> 
+        <h1><%= post.title%></h1>
+        <% if (post.content.length>=50){ %>
+    <p style="white-space:pre-line;"><%= post.content.substring(0,50)+'.....'%> 
         <a href='/posts/<%=post.title%>'>read more</a>
     </p>
+<%}else{%>
+    <p style="white-space:pre-line;"><%=post.content%></p>
 
-    <%})%>
+<%}})%>
 <%- include('partials/footer') -%>
